logs/Slang/chapter-7/queues/pop_back.sv.log
name: pop_back
description: Test queues pop_back function support
should_fail: 0
tags: 7.10.2.5 7.10.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/queues/pop_back.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/queues/pop_back.sv:9:6: error: dimension requires a constant range
int q[$];
     ^~~
